<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_filter"
        android:orderInCategory="10"
        android:title="@string/action_filter"
        android:icon="@drawable/ic_filter_list_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_profile"
        android:orderInCategory="20"
        android:title="@string/action_profile"
        android:icon="@drawable/ic_account_circle_white_24dp"
        app:showAsAction="always"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_admin"
        android:orderInCategory="200"
        android:title="@string/action_admin"
        android:visible="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/action_signout"
        android:orderInCategory="999"
        android:title="@string/action_signout"
        app:showAsAction="never"/>
</menu>
